update monitoring stack to latest stable versions
- Grafana: 9.5.2 → 12.0.0
- Prometheus: main → v3.4.1 (stable release)
- Alertmanager: v0.25.0 → v0.28.1
- Loki: 2.9.0 → 3.1.0
- Promtail: 2.9.0 → 3.1.0
- cAdvisor: v0.49.2 → v0.50.0
- Node Exporter: v1.5.0 → v1.9.1

Updated all components to their latest stable versions for improved
performance, security patches, and new features. Maintained version
compatibility between Loki and Promtail.

BREAKING CHANGE: Updated Loki configuration to support v3.x requirements:
- Migrated schema config from v11 to v13 with backward compatibility
- Changed index store from boltdb-shipper to tsdb for new data
- Enabled structured metadata and OTLP ingestion support
- Added ingester and storage_config sections for Loki 3.x compatibility

--- a/loki/loki-config.yaml
+++ b/loki/loki-config.yaml
@@ -25,6 +25,7 @@ query_range:
 
 schema_config:
   configs:
+    # Keep old schema for existing data
     - from: 2020-10-24
       store: boltdb-shipper
       object_store: filesystem
@@ -32,6 +33,20 @@ schema_config:
       index:
         prefix: index_
         period: 24h
+    # New schema for Loki 3.x compatibility
+    - from: 2024-04-01
+      store: tsdb
+      object_store: filesystem
+      schema: v13
+      index:
+        prefix: loki_index_
+        period: 24h
+
+limits_config:
+  allow_structured_metadata: true
+  max_cache_freshness_per_query: 10m
+  split_queries_by_interval: 15m
+  volume_enabled: true
 
 ruler:
   alertmanager_url: http://alertmanager:9093
@@ -40,3 +55,19 @@ ruler:
 
 analytics:
   reporting_enabled: false
+
+ingester:
+  lifecycler:
+    address: 127.0.0.1
+    ring:
+      kvstore:
+        store: inmemory
+      replication_factor: 1
+    final_sleep: 0s
+  chunk_idle_period: 5m
+  chunk_retain_period: 30s
+
+storage_config:
+  tsdb_shipper:
+    active_index_directory: /loki/tsdb-index
+    cache_location: /loki/tsdb-cache
